syntax = "proto2";

package connection;

option java_package = "org.flexiblepower.proto";
option java_outer_classname = "ConnectionProto";

message ConnectionMessage {
  enum ModeType {
    CREATE = 0;
    SUSPEND = 1;
    RESUME = 2;
    TERMINATE = 3;
  }
  required ModeType mode = 1;
  required string connectionId = 2;
  optional string targetAddress = 3;
  optional int32 listenPort = 4;
  optional string receiveHash = 5;
  optional string sendHash = 6;
}

enum ConnectionState {
  STARTING = 0;
  CONNECTED = 1;
  SUSPENDED = 2;
  INTERRUPTED = 3;
  TERMINATED = 4;
}

message ConnectionHandshake {
  required ConnectionState connectionState = 1;
  required string connectionId = 2;
  optional string receiveHash = 3;
  optional string sendHash = 4;
}
